--- a/booking.html
+++ b/booking.html
@@ -32,6 +32,23 @@
     </div>
     <!-- End loading page -->
 
+     <!-- mode and translate -->
+     <div class="slide-text">
+        <div class="row">
+            <div class="col-lg-2 ">
+                <span class="moon">
+                    <a href=""><i class="fa-solid fa-moon"></i></a>
+                </span>
+            </div>
+            <div class="col-lg-2">
+                <span class="trans">
+                    <a href=""> <i class="fa-solid fa-globe"></i></a>
+                </span>
+            </div>
+        </div>
+
+    </div>
+    <!-- End mode and translate -->
 
     <!-- start header -->
     <header>
