--- a/login.html
+++ b/login.html
@@ -28,85 +28,138 @@
     </div>
     <!-- End loading page -->
 
-        <!-- mode and translate -->
-        <div class="slide-text">
-            <div class="row">
-                <div class="col-lg-2 ">
-                    <span class="moon">
-                        <a href=""><i class="fa-solid fa-moon"></i></a>
-                    </span>
-                </div>
-                <div class="col-lg-2">
-                    <span class="trans">
-                        <a href=""> <i class="fa-solid fa-globe"></i></a>
-                    </span>
-                </div>
+    <!-- mode and translate -->
+    <div class="slide-text">
+        <div class="row">
+            <div class="col-lg-2 ">
+                <span class="moon">
+                    <a href=""><i class="fa-solid fa-moon"></i></a>
+                </span>
             </div>
-    
-        </div>
-        <!-- End mode and translate -->
-
-
-    <!--start login-->
-    <section class="login ">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="left-side">
-                        <div class="content-box">
-                            <div class="text-box animate__animated animate__bounceInLeft    ">
-                                <h1>book your ticket online for <span class="animate__animated animate__fadeInDownBig"
-                                        data-wow-delay="1s">travel</span></h1>
-                                <p>Easy, Safe, Reliable Ticketing.</p>
-                                <a href="https://twitter.com/horus_trans" target="_blank"><i
-                                        class="fa-brands fa-twitter"></i></a>
-                                <a href="https://www.facebook.com/horustrans?mibextid=LQQJ4d" target="_blank"><i
-                                        class="fa-brands fa-facebook"></i></a>
-                                <a class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-                                <a href="https://www.instagram.com/horusbus/?fbclid=IwAR1gw_2HUcOoXrBkgnAF57B9StR0aOijqeN57KmZoIGgQYcFncdWquJv1tE"
-                                    target="_blank"><i class="fa-brands fa-instagram"></i></a>
-
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 mt-5">
-                    <div class="right-side animate__animated animate__bounceInRight" data-wow-delay=".5s">
-                        <header>login form</header>
-                        <form action="./index.html">
-                            <div class="field email">
-                                <div class="input-area">
-                                    <input class="emailInput" type="text" placeholder="enter your email">
-                                    <i class="icon fa-solid fa-envelope"></i>
-                                    <i class="error error-icon fa-solid fa-circle-exclamation"></i>
-                                </div>
-                                <div class="error error-txt">email can't be blank</div>
-                            </div>
-                            <div class="field password">
-                                <div class="input-area">
-                                    <input class="passInput" type="password" placeholder="enter your password">
-                                    <i class="icon fa-solid fa-lock"></i>
-                                    <i class="error error-icon fa-solid fa-circle-exclamation"></i>
-                                </div>
-                                <div class="error error-txt">password can't be blank</div>
-                            </div>
-                            <div class="forgetLink">
-                                <a href="#">forget password ?</a>
-                            </div>
-                            <a href="index.html" class="form-control btn w-100">Login</a>
-                        </form>
-                        <div class="signupLink">
-                            not yet member ? <a href="register.html">sign up now</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-lg-2">
+                <span class="trans">
+                    <a href=""> <i class="fa-solid fa-globe"></i></a>
+                </span>
             </div>
         </div>
 
-    </section>
+    </div>
+    <!-- End mode and translate -->
+
+    <main class="English state" id="En">
+        <!--start login-->
+        <section class="login ">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="left-side">
+                            <div class="content-box">
+                                <div class="text-box animate__animated animate__bounceInLeft    ">
+                                    <h1>book your ticket online for <span
+                                            class="animate__animated animate__fadeInDownBig"
+                                            data-wow-delay="1s">travel</span></h1>
+                                    <p>Easy, Safe, Reliable Ticketing.</p>
+                                    <a href="https://twitter.com/horus_trans" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a>
+                                    <a href="https://www.facebook.com/horustrans?mibextid=LQQJ4d" target="_blank"><i
+                                            class="fa-brands fa-facebook"></i></a>
+                                    <a class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                                    <a href="https://www.instagram.com/horusbus/?fbclid=IwAR1gw_2HUcOoXrBkgnAF57B9StR0aOijqeN57KmZoIGgQYcFncdWquJv1tE"
+                                        target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 mt-5">
+                        <div class="right-side animate__animated animate__bounceInRight" data-wow-delay=".5s">
+                            <header>login form</header>
+                            <form action="./index.html">
+                                <div class="field email">
+                                    <div class="input-area">
+                                        <input class="emailInput" type="text" placeholder="enter your email">
+                                        <i class="icon fa-solid fa-envelope"></i>
+                                        <i class="error error-icon fa-solid fa-circle-exclamation"></i>
+                                    </div>
+                                    <div class="error error-txt">email can't be blank</div>
+                                </div>
+                                <div class="field password">
+                                    <div class="input-area">
+                                        <input class="passInput" type="password" placeholder="enter your password">
+                                        <i class="icon fa-solid fa-lock"></i>
+                                        <i class="error error-icon fa-solid fa-circle-exclamation"></i>
+                                    </div>
+                                    <div class="error error-txt">password can't be blank</div>
+                                </div>
+                                <div class="forgetLink">
+                                    <a href="#">forget password ?</a>
+                                </div>
+                                <a href="index.html" class="form-control btn w-100">Login</a>
+                            </form>
+                            <div class="signupLink">
+                                not yet member ? <a href="register.html">sign up now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
+
+
+
+
+    <!-- End main English -->
+
+    <!-- start main Arabic -->
+    <main class="Arabic" id="Ar">
+
+        <!-- بدء تسجيل الدخول -->
+        <section class="login ">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="left-side">
+                            <div class="content-box">
+                                <div class="text-box animate__animated animate__bounceInLeft">
+                                    <h1>احجز تذكرتك عبر الإنترنت <span class="animate__animated animate__fadeInDownBig"
+                                            data-wow-delay="1s">للتنقل</span></h1>
+                                    <p>حجز التذاكر بسهولة وأمان وموثوقية.</p>
+                                    <a href="https://twitter.com/horus_trans" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a>
+                                    <a href="https://www.facebook.com/horustrans?mibextid=LQQJ4d" target="_blank"><i
+                                            class="fa-brands fa-facebook"></i></a>
+                                    <a class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                                    <a href="https://www.instagram.com/horusbus/?fbclid=IwAR1gw_2HUcOoXrBkgnAF57B9StR0aOijqeN57KmZoIGgQYcFncdWquJv1tE"
+                                        target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 mt-5">
+                        <div class="right-side animate__animated animate__bounceInRight" data-wow-delay=".5s">
+                            <header>نموذج تسجيل الدخول</header>
+                            <form action="./index.html">
+                                <div class="field email">
+                                    <div class="input-area">
+                                        <input class="emailInput" type="text" placeholder="أدخل بريدك الإلكتروني">
+                                        <i class="icon fa-solid fa-envelope"></i>
+                                        <i class="error error-icon fa-solid fa-circle-exclamation"></i>
+                                    </div>
+                                    <div class="error error-txt">لا يمكن ان يكون البريد الالكتروني</div>
+    </main>
+
+
+
+    <!--End  main Arabic -->
     <!--end login-->
 
 
